Add MongoDB configuration and example environment file; update .gitignore and package dependencies

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "passport": "^0.7.0",
     "passport-firebase-jwt": "^1.2.1",
